--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,14 @@
 asgiref==3.9.1
 asttokens==3.0.0
+certifi==2025.8.3
+charset-normalizer==3.4.3
 colorama==0.4.6
 decorator==5.2.1
 Django==5.2.5
 djangorestframework==3.16.1
 executing==2.2.0
+googlemaps==4.10.0
+idna==3.10
 iniconfig==2.1.0
 ipdb==0.13.13
 ipython==9.5.0
@@ -19,8 +23,10 @@ pure_eval==0.2.3
 Pygments==2.19.2
 pytest==8.4.1
 pytest-django==4.11.1
+requests==2.32.5
 sqlparse==0.5.3
 stack-data==0.6.3
 traitlets==5.14.3
 tzdata==2025.2
+urllib3==2.5.0
 wcwidth==0.2.13
