--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,6 @@ decorator==5.2.1
 Django==5.2.5
 djangorestframework==3.16.1
 executing==2.2.0
-googlemaps==4.10.0
 idna==3.10
 iniconfig==2.1.0
 ipdb==0.13.13
@@ -23,6 +22,7 @@ pure_eval==0.2.3
 Pygments==2.19.2
 pytest==8.4.1
 pytest-django==4.11.1
+python-dotenv==1.1.1
 requests==2.32.5
 sqlparse==0.5.3
 stack-data==0.6.3
