--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ decorator==5.2.1
 Django==5.2.5
 djangorestframework==3.16.1
 executing==2.2.0
+googlemaps==4.10.0
 idna==3.10
 iniconfig==2.1.0
 ipdb==0.13.13
