--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ ipdb==0.13.13
 ipython==9.5.0
 ipython_pygments_lexers==1.1.1
 jedi==0.19.2
+logging==0.4.9.6
 matplotlib-inline==0.1.7
 packaging==25.0
 parso==0.8.5
